tests/compilefail36.out
[1mtests/compilefail36.pas:5:16: [0m[1m[91merror:[0m Unexpected token writeln
     5 | 	mystring = writeln;