tests/compilefail36.pas
program compilefail36(output);
{garbage token as rval of constant}

const 
	mystring = writeln;

begin

	writeln(mystring);

end.
